--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <html lang="zh">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./style/reset.css">
-		<link rel="stylesheet" href="./style/main.css">
-		<script src="./js/pixi.min.js"></script>
-		<script src="./js/Alloytouch.js"></script>
-		<script src="./js/jquery-1.8.3.min.js"></script>
-		<script src="./js/TweenMax.min.js"></script>
-		<title>一镜到底</title>
-	</head>
-	<body>
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./style/reset.css">
+	<link rel="stylesheet" href="./style/main.css">
+	<script src="./js/pixi.min.js"></script>
+	<script src="./js/Alloytouch.js"></script>
+	<script src="./js/jquery-1.8.3.min.js"></script>
+	<script src="./js/TweenMax.min.js"></script>
+	<title>一镜到底</title>
+</head>
+
+<body>
+	<div class="wrapper">
+		<div id="loading">
+			<div id="loadingProgress"></div>
+			<div id="tip">向左滑动</div>
+		</div>
+		<div class="ewm">
+			<img src="images/ewm.png" alt="">
+		</div>
 		<div id="stage"></div>
-		<script src="./js/main.js" type="module"></script>
-	</body>
+		<div id="musicIcon" class="mplay"></div>
+	</div>
+	<script src="./js/main.js" type="module"></script>
+	<div class="audioBix">
+		<audio src="./mp3/bg.mp3" preload="auto" loop="loop" id="bgmusic"></audio>
+		<audio src="./mp3/ding.mp3" preload="auto" id="ding"></audio>
+		<audio src="./mp3/huanhu.mp3" preload="auto" id="huanhu"></audio>
+	</div>
+</body>
+
 </html>
